# nlp-arxiv-daily

./: .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  Makefile  README.md  config.yaml  daily_arxiv.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: astro-build.yml  check-lint.yml  nlp-arxiv-daily.yml  test.yml  update_paper_links.yml
docs/: _config.yml  index.md  nlp-arxiv-daily-web.json  nlp-arxiv-daily.json
docs/archive/: 2007-07.json  2007-07.md  2008-02.md  2009-03.json  2009-03.md  2010-09.md  2011-03.json  2011-03.md  2011-09.md  2012-10.json  2012-10.md  2014-08.md  2014-12.md  2015-03.json  2015-03.md  2015-05.md  2015-07.json  2015-07.md  2015-10.json  2015-10.md  2016-09.md  2016-11.md  2017-03.json  2017-03.md  2017-10.md  2017-11.md  2018-01.md  2018-05.md  2018-09.md  2018-10.json  2018-10.md  2018-11.json  2018-11.md  2018-12.json  2018-12.md  2019-04.json  2019-04.md  2019-05.md  2019-06.md  2019-08.json  (+133 more)
docs/archive-web/: 2007-07.md  2008-02.json  2008-02.md  2009-03.md  2010-09.json  2010-09.md  2011-03.md  2011-09.json  2011-09.md  2012-10.md  2014-08.json  2014-08.md  2014-12.json  2014-12.md  2015-03.md  2015-05.json  2015-05.md  2015-07.md  2015-10.md  2016-09.json  2016-09.md  2016-11.json  2016-11.md  2017-03.md  2017-10.json  2017-10.md  2017-11.json  2017-11.md  2018-01.json  2018-01.md  2018-05.json  2018-05.md  2018-09.json  2018-09.md  2018-10.md  2018-11.md  2018-12.md  2019-04.json  2019-04.md  2019-05.json  (+137 more)
nlp_arxiv_daily/: __init__.py  __main__.py  cli.py  core.py  fetcher.py  renderer.py  storage.py  types.py
tests/: conftest.py  test_cli.py  test_daily_arxiv.py  test_e2e.py  test_fetcher.py  test_integration.py  test_package.py  test_renderer.py  test_storage.py
tests/fixtures/: papers_sample.json  papers_sample_web.json
tests/fixtures/expected/: readme.md  web.md
tests/fixtures/expected/archive_dir/: 2026-03.md  index.md
web/: astro.config.mjs  package.json  pnpm-lock.yaml
web/public/: CNAME
web/src/: content.config.ts
web/src/components/: BackToTop.astro  Footer.astro  Header.astro  KeywordFilter.astro  KeywordSection.astro  PaperCard.astro  TableOfContents.astro  ThemeToggle.astro
web/src/layouts/: Layout.astro
web/src/pages/: index.astro  rss.xml.ts  search.astro
web/src/pages/archive/: [month].astro  index.astro
web/src/pages/og/: [...slug].png.ts
web/src/styles/: global.css
web/src/utils/: paperRow.ts  url.ts
