[project]
name = "nlp-arxiv-daily"
version = "0.1.0"
description = "Automatically update NLP arxiv papers daily"
requires-python = ">=3.13,<3.14"
dependencies = [
  "arxiv==3.0.0",
  "pyyaml==6.0.3",
  "requests==2.33.1",
]

[dependency-groups]
test = ["pytest==9.0.3"]
quality = ["pre-commit==4.6.0", "ruff==0.15.12"]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-ra -v -l -m 'not integration'"
markers = [
  "integration: 실제 외부 API/네트워크 호출이 필요한 통합 테스트 (arxiv, HF Papers)",
]

[tool.ruff]
line-length = 120
target-version = "py313"

exclude = [
  ".git",
  ".hg",
  ".mypy_cache",
  ".tox",
  ".venv",
  "_build",
  "buck-out",
  "build",
  "dist",
  "env",
  "venv",
]

[tool.ruff.lint]
ignore = ["C901", "E501", "E402"]
select = ["C", "E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
